fix: Fixes for alignment issues when using bootstrap
Jira Issue 2332

--- a/css/fixedColumns.bootstrap.scss
+++ b/css/fixedColumns.bootstrap.scss
@@ -19,7 +19,9 @@ tfoot th {
 }
 
 th.dtfc-fixed-left, 
-th.dtfc-fixed-right {
+th.dtfc-fixed-right,
+td.dtfc-fixed-left,
+td.dtfc-fixed-right {
 	z-index: 1;
 }
 
